--- a/src/assets/styles/variaveis.scss
+++ b/src/assets/styles/variaveis.scss
@@ -1,2 +1,7 @@
-$cor-fundo: rgb(30, 58, 8);
-$cor-primaria: #37ab00;
+$cor-fundo: rgb(192, 228, 192);
+$cor-primaria: #fff;
+$h-spotify-logo: 120px;
+
+$cor-fundo-menu: rgba(255, 255, 255, 0.685);
+$h-menu-opcoes: 150px;
+$m-entre-menu: 10px;
