--- a/src/app/components/botao-menu/botao-menu.component.scss
+++ b/src/app/components/botao-menu/botao-menu.component.scss
@@ -1,3 +1,5 @@
+@import 'variaveis';
+
 :host {
   display: block;
   width: 100%;
@@ -8,9 +10,28 @@
     padding: 10px 0px 10px 20px;
     border-radius: 5px;
     text-align: left;
-    font-weight: 600;
-    font-size: .8rem;
+    font-weight: 700;
+    font-size: 1rem;
     cursor: pointer;
+
+    span {
+      display: inline-block;
+      vertical-align: middle;
+      width: 150px;
+      white-space: nowrap;
+      margin-left: 15px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    color: $cor-primaria;
+    background-color: transparent;
+
+    &.selecionado {
+      background-color: $cor-primaria;
+      color: #fff;
+    }
+
   }
 
   }
