--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -27,15 +27,53 @@
   .menu-container {
     width: 100%;
 
-    &.opcoes {
+    &.flex {
       flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+    }
 
+    &.opcoes {
       min-height: $h-menu-opcoes;
 
+      i {
+        font-size: 20px;
+      }
       * {
         margin-bottom: $m-entre-menu;
         flex-direction: column;
       }
     }
+
+    .playlist-titulo {
+      margin: 10px 0px;
+      align-items: flex-start;
+      font-weight: 700;
+      font-size: .7rem;
+      color: $preto-transp-30;
+    }
+
+    .playlist-scroll {
+      width: 100%;
+      max-height: calc(95vh $h-desconsiderar);
+      overflow-y: auto;
+
+      &::-webkit-scrollbar{
+        display: none;
+      }
+
+      * {
+        margin-bottom: $m-entre-menu;
+      }
+    }
+  }
+
+  .usuario-info {
+    flex-grow: 0;
+    display: block;
+    bottom: 0;
+    align-self: flex-end;
+    height: $h-desconsiderar;
+    width: 100%;
   }
 }
