factories em Interfaces, tabela, topArtistas, painel

--- a/src/app/components/botao-menu/botao-menu.component.scss
+++ b/src/app/components/botao-menu/botao-menu.component.scss
@@ -24,12 +24,12 @@
       text-overflow: ellipsis;
     }
 
-    color: $cor-primaria;
+    color: $yellowgreen;
     background-color: transparent;
 
     &.selecionado {
-      background-color: $cor-primaria;
-      color: #fff;
+      background-color: $yellowgreen;
+      color: $branco;
     }
 
   }
