--- a/src/assets/styles/variaveis.scss
+++ b/src/assets/styles/variaveis.scss
@@ -1,9 +1,13 @@
 @import "~bootstrap-icons/font/bootstrap-icons.css";
 
-$cor-fundo: rgb(192, 228, 192);
-$cor-primaria: #37AB00;
-$cor-fundo-menu: rgba(255, 255, 255, 0.685);
-$preto-transp-30: #00004da1;
+$cor-fundo: rgba(0, 0, 0, 0.705);
+$cor-primaria: #f3f3df;
+$cor-fundo-menu: rgba(0, 0, 0, 0.836);
+$preto-transp-30: #00004d5d;
+$preto-transp-9: #1e1e4e9f;
+$yellowgreen: yellowgreen;
+$branco: #fff;
+
 
 $h-spotify-logo: 120px;
 $h-menu-opcoes: 150px;
