--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,44 @@
 <div class="minhas-musicas">
-  <span class="titulo-bg mt-4">
-    Seu Top Artista
-  </span>
+  <span class="titulo-bg mt-4"> Seu Top Artista </span>
+
+  <app-top-artista class="mt-2 d-block"></app-top-artista>
+
+  <span class="titulo-bg mt-4"> Músicas Curtidas </span>
+
+  <table class="table mt-3">
+    <thead>
+      <tr>
+        <th class="w-5">#</th>
+        <th class="w-5"></th>
+        <th class="w-25">Título</th>
+        <th class="w-30">Artista</th>
+        <th class="w-20">Álbum</th>
+        <th class="w-10 direita">Tempo</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr
+        *ngFor="let musica of musicas"
+        [class.executando]="musica.id == musicaAtual.id"
+        (click)="executarMusica(musica)"
+        (click)="onClickPlay()"
+      >
+        <td>
+          <i class="bi bi-play-circle play"></i>
+        </td>
+
+        <td>
+          <img [src]="musica.album.imagemUrl" />
+        </td>
+        <td>
+          {{ musica.titulo }}
+        </td>
+        <td>{{ obterArtistas(musica) }}</td>
+        <td>{{ musica.album.nome }}</td>
+        <td class="direita">{{ musica.tempo }}</td>
+      </tr>
+    </tbody>
+  </table>
 </div>
+
+<app-painel class="painel-direito"></app-painel>
