--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,3 +22,37 @@ body {
     align-items: center;
   }
 }
+
+.titulo {
+  color: $cor-primaria;
+  display: block;
+  font-weight: 700;
+
+  &-bg {
+    @extend .titulo;
+    font-size: 2.2rem;
+  }
+
+  &-md {
+    @extend .titulo;
+    font-size: 1.4rem;
+  }
+}
+
+.mt {
+  @for $i from 1 to 10 {
+    &-#{ $i } {
+      margin-top: #{$i}vh;
+    }
+  }
+}
+
+.p-20 {
+  padding: 20px;
+}
+
+.card {
+  box-shadow: 0px 0px 5px $preto-transp-30;
+  background-color: rgba(161, 156, 156, 0.253);
+  border-radius: 10px;
+}
