modificações e troca de layout

--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -6,8 +6,8 @@
   overflow-y: hidden;
   display: flex;
   flex-direction: column;
-  background-color: $cor-fundo-menu;
-  box-shadow: 1px 1px 15px #0101115d;
+  background-color: $preto-transp-30;
+
 
 
   .menu {
