--- a/src/app/components/painel/painel.component.scss
+++ b/src/app/components/painel/painel.component.scss
@@ -4,12 +4,11 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
-  max-height: 100vh;
-  max-width: 300px;
+
   width: 300px;
-  padding: 40px 20px 20px 20px;
-  background-color: rebeccapurple;
-  // background-color: $cor-fundo-menu;
+  padding: 20px;
+  background-color: $preto-transp-30;
+  box-shadow: 1px 1px 15px $preto-transp-30;
 
   .player {
     flex-grow: 1;
