--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -5,6 +5,7 @@
 :host {
   display: flex;
   justify-content: space-between;
+  background-color:$preto-transp-9;
 
   ::-webkit-scrollbar {
     width: 7px;
