--- a/src/app/components/top-artista/top-artista.component.html
+++ b/src/app/components/top-artista/top-artista.component.html
@@ -1,4 +1,4 @@
-<div class="card p-20">
+<div class="card">
   <div class="artista flex">
     <span class="titulo-bg">
       {{ topArtista.nome }}
