--- a/src/app/components/top-artista/top-artista.component.scss
+++ b/src/app/components/top-artista/top-artista.component.scss
@@ -1,38 +1,32 @@
-@import 'variaveis';
+@import "variaveis";
 
 .card {
-  height: 300px;
+  height: 250px;
   position: relative;
   overflow: hidden;
+  background-color: $preto-transp-9;
 
   .artista {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
     z-index: 1;
-    padding: 10px 30px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
+    padding: 10% 0% 0% 0%;
+    justify-content: start;
+    margin-left: 35%;
+    max-width: 60%;
   }
 
   .image {
+    background-size: cover;
     position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background-position: center;
+    height: 250px;
+    width: 330px;
+    background-position: left;
     background-size: cover;
     background-repeat: no-repeat;
-    opacity: .5;
-    z-index: 0;
+    z-index: 1;
   }
 
   span {
-    color: rgba(0, 0, 0, 0.651);
-    text-shadow: 0px 0px 5px $branco;
+    color: $branco;
   }
 }
