--- a/src/app/pages/listaMusica/listaMusica.component.html
+++ b/src/app/pages/listaMusica/listaMusica.component.html
@@ -1,3 +1,48 @@
-<p>
-  listaMusica works!
-</p>
+<div class="lista mt-4">
+  <app-banner [ImagemUrl]="bannerImagemUrl" [texto]="bannerTexto"></app-banner>
+
+
+  <table class="table mt-3">
+    <thead>
+      <tr>
+        <th class="w-5">#</th>
+        <th class="w-5"></th>
+        <th class="w-25">Título</th>
+        <th class="w-30">Artista</th>
+        <th class="w-20">Álbum</th>
+        <th class="w-10 direita">Tempo</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr
+        *ngFor="let musica of musicas"
+        [class.executando]="musica.id == musicaAtual.id"
+        (click)="executarMusica(musica)"
+      >
+        <td>
+          <i class="bi bi-play-circle play"></i>
+        </td>
+        <td>
+          <img [src]="musica.album.imagemUrl" />
+        </td>
+        <td>
+          {{ musica.titulo }}
+        </td>
+        <td>{{ obterArtistas(musica) }}</td>
+        <td>{{ musica.album.nome }}</td>
+        <td class="direita">{{ musica.tempo }}</td>
+      </tr>
+    </tbody>
+    <tfoot *ngIf="!musicas.length">
+      <tr>
+        <td colspan="8" class="center">
+          <h1>Você está Desconectado</h1>
+          <h2>Tente Logar novamente!</h2>
+        </td>
+      </tr>
+    </tfoot>
+  </table>
+</div>
+<app-painel class="painel-direito">
+
+</app-painel>
