--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,6 +33,11 @@ body {
     font-size: 2.2rem;
   }
 
+  &-mbg {
+    @extend .titulo;
+    font-size: 3rem;
+  }
+
   &-md {
     @extend .titulo;
     font-size: 1.4rem;
