--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,12 @@
 <div class="minhas-musicas">
   <span class="titulo-bg mt-4"> Seu Top Artista </span>
-  <i class="bi bi-lightbulb"></i>
-  <i class="bi bi-lightbulb-fill"></i>
-  <i class="bi bi-toggle-off"></i>
-  <i class="bi bi-toggle-on"></i>
-  
+  <div>
+    <i class="bi bi-lightbulb"></i>
+    <i class="bi bi-lightbulb-fill"></i>
+    <i class="bi bi-toggle-off"></i>
+    <i class="bi bi-toggle-on"></i>
+  </div>
+
   <app-top-artista class="mt-2 d-block"></app-top-artista>
 
   <span class="titulo-bg mt-4"> Músicas Curtidas </span>
