--- a/src/app/components/card-player/card-player.component.html
+++ b/src/app/components/card-player/card-player.component.html
@@ -3,14 +3,14 @@
     class="image"
     [style.background-image]="'url(' + musica.album.imagemUrl + ')'"
   >
-  <div class="teste" *ngIf="!musica.album.imagemUrl.length">
+  <div class="musicOff" *ngIf="!musica.album.imagemUrl.length">
     <p>nenhuma música tocando <br> no momento</p>
     <i class="bi bi-vinyl-fill"></i>
   </div>
 </div>
 
   <div class="controles">
-    <span class="nomeMusica">{{ musica.titulo }}</span> <br />
+    <span class="nomeMusica">{{ musica.titulo }}</span> <br /><br />
     <span>{{ obterArtistas(musica) }}</span>
 
     <div class="botoes">
