--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,4 +1,5 @@
 <div class="base flex flex-center">
+  <video src="../../../assets/video/pexels-cottonbro-7520860.mp4" autoplay muted loop></video>
   <img src="../../../assets/images/Spotify_Logo.png" alt="" />
   <button (click)="abrirLogin()">Abrir Spotify</button>
 </div>
