--- a/src/assets/styles/table.scss
+++ b/src/assets/styles/table.scss
@@ -51,7 +51,7 @@
     td {
       padding: 15px 20px 10px 0px;
       font-weight: 500;
-      font-size: .85rem;
+      font-size: 1rem;
       color: gray;
 
       &:nth-child(1){
