--- a/src/app/components/rodape-user/rodape-user.component.scss
+++ b/src/app/components/rodape-user/rodape-user.component.scss
@@ -1,17 +1,17 @@
 @import 'variaveis';
 
 div{
-  padding: 5px 30px;
+  padding: 15px 30px;
   justify-content: space-between;
   align-items: center;
   height: 100%;
   width: 100%;
   color: $cor-primaria;
-  border-top: 1px solid $branco;
+  border-top: 1px solid gray;
 
   img {
     flex-grow: 0;
-    width: 40px;
+    width: 50px;
     height: auto;
     border-radius: 50%;
   }
@@ -19,7 +19,7 @@ div{
   span {
     flex-grow: 1;
     margin-left: 20px;
-    font-size: .9rem;
+    font-size: 1rem;
     font-weight: 700;
   }
 
