--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap");
-@import "variaveis.scss";
+@import "variaveis";
 
 html,
 body {
@@ -57,7 +57,7 @@ body {
 }
 
 .card {
-  box-shadow: 0px 0px 5px $preto-transp-30;
+  box-shadow: 0px 0px 5px $branco;
   background-color: rgba(161, 156, 156, 0.253);
   border-radius: 10px;
 }
