--- a/src/app/components/top5/top5.component.html
+++ b/src/app/components/top5/top5.component.html
@@ -1,9 +1,5 @@
-<div>
-  <i class="bi bi-lightbulb"></i>
-  <i class="bi bi-lightbulb-fill"></i>
-  <i class="bi bi-toggle-off"></i>
-  <i class="bi bi-toggle-on"></i>
-</div>
+<app-toggle></app-toggle>
+
 <span class="titulo-md">Seu Top Favorito</span>
 <app-artista-item-img
   *ngFor="let artista of artistas"
