--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap");
 @import "variaveis";
+@import "mat-theme";
 
 html,
 body {
+  // height: 100%;
   margin: 0;
   padding: 0;
   background-color: $cor-fundo;
