--- a/src/app/components/card-player/card-player.component.scss
+++ b/src/app/components/card-player/card-player.component.scss
@@ -4,6 +4,7 @@
   width: 100%;
   height: 100%;
   max-width: 400px;
+  // max-width: 400px;
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -44,6 +45,7 @@
     }
 
     span {
+      display: block;
       font-size: 1rem;
       font-weight: 700;
       color: gray;
@@ -51,7 +53,8 @@
 
     .botoes {
       width: 100%;
-      height: 85%;
+      margin-top: 50px;
+      height: 15%;
       display: flex;
       justify-content: space-evenly;
       align-items: center;
@@ -65,5 +68,17 @@
         cursor: pointer;
       }
     }
+
+    .teste{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-top: 50px;
+    }
+
+    .teste input::-webkit-slider-thumb{
+      background-color: aqua;
+    }
+
   }
 }
