--- a/src/app/components/top-artista/top-artista.component.scss
+++ b/src/app/components/top-artista/top-artista.component.scss
@@ -1,5 +1,11 @@
 @import "variaveis";
 
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .card {
   height: 250px;
   position: relative;
@@ -8,9 +14,9 @@
 
   .artista {
     position: absolute;
-    padding: 6% 0% 0% 0%;
+    padding: 6% 1%;
     justify-content: start;
-    margin-left: 35%;
+    margin-left: 30%;
     max-width: 60%;
   }
 
@@ -26,11 +32,12 @@
     display: flex;
     align-items: center;
     text-transform: capitalize;
-    padding-right: 5px;
+    padding: 8px 0px;
     color: $branco;
 
     &.genero {
       text-transform: uppercase;
+      font-size: 15px;
       color: $branco;
     }
   }
