Corrigindo bug, add foto doa artista no banner

--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -4,8 +4,5 @@
       {{ texto }}
     </span>
   </div>
-  <div class="image"
-      [style.background-image]="'url(' + ImagemUrl + ')'"
-  >
-  </div>
+  <div class="image" [style.background-image]="'url(' + ImagemUrl + ')'"></div>
 </div>
