--- a/src/app/components/painel/painel.component.html
+++ b/src/app/components/painel/painel.component.html
@@ -1,3 +1,6 @@
 <!-- <app-buscar></app-buscar> -->
-<app-top5></app-top5>
+<app-top5
+  (imagemArtista)="pegandoImg($event)"
+  (nomeArtista)="pegandoNome($event)"
+></app-top5>
 <app-card-player class="player mt-2"></app-card-player>
