--- a/src/app/components/toggle/toggle.component.html
+++ b/src/app/components/toggle/toggle.component.html
@@ -1,11 +1,14 @@
-<h2>Troque de Modo
-<i
-  class="lightbulb"
-  [ngClass]="{
-    'bi bi-lightbulb': !trocaIcon,
-    'bi bi-lightbulb-off-fill': trocaIcon
-  }"
-  [(ngModel)]="isDark"
-  (click)="toogleDark()"
-></i>
+<h2>
+  Troque de Modo
+  <i
+    class="lightbulb"
+    [ngClass]="{
+      'bi bi-lightbulb': !trocaIcon,
+      'bi bi-lightbulb-off-fill': trocaIcon
+    }"
+    [(ngModel)]="isDark"
+    (click)="toogleDark()"
+    name="fieldName"
+    ngDefaultControl
+  ></i>
 </h2>
