--- a/src/app/components/top5/top5.component.html
+++ b/src/app/components/top5/top5.component.html
@@ -5,7 +5,7 @@
   *ngFor="let artista of artistas"
   class="mt-1"
   [imagemSrc]="artista?.imagemUrl"
-  (click)="irParaPlaylist(artista?.id)"
+  (click)="irParaPlaylist(artista?.id, artista?.imagemUrl, artista.nome)"
 >
   {{ artista.nome }}
 </app-artista-item-img>
